--- a/virtual-keyboard/index.html
+++ b/virtual-keyboard/index.html
@@ -8,6 +8,6 @@
   <title>Document</title>
 </head>
 <body>
-  <script src="./src/js/script.js" type="module"></script>
+  <script src="dist/script.js"></script>
 </body>
 </html>
